<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/phone_number"
        android:textColor="@color/greyText"
        android:textSize="16dp" />
    <TextView
        android:id="@+id/activity_confirm_tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/value"
        android:textColor="@color/greyText"
        android:textSize="16dp" />
    <TextView
        android:id="@+id/activity_confirm_tv_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/payment_method"
        android:textColor="@color/greyText"
        android:textSize="16dp" />
    <TextView
        android:id="@+id/activity_confirm_tv_payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/total_amount"
        android:textColor="@color/greyText"
        android:textSize="16dp" />
    <TextView
        android:id="@+id/activity_confirm_tv_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <Button
        android:id="@+id/activity_confirm_bt_pay"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_blue_radius"
        android:text="@string/pay"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16dp" />
</LinearLayout>