<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/payoo"
            android:textColor="@color/defaultColorDark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/defaultColor">
        </View>

        <TextView
            android:id="@+id/dialog_otp_tv_otp_desciption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingEnd="20dp"
            android:textColor="@color/greyText"
            android:textSize="16dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/otp_code"
            android:textColor="@color/greyText"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/dialog_otp_edt_otp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_grey_radius_border_click"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="3dp"
            tools:ignore="Autofill,LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_otp_tv_close"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/close"
                android:textAllCaps="true"
                android:textColor="@color/defaultColorDark"
                android:background="@drawable/bg_view_click"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1">
            </View>

            <TextView
                android:id="@+id/dialog_otp_tv_ok"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:background="@drawable/bg_view_click"
                android:gravity="center"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:textColor="@color/defaultColorDark"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>